optimized the wb pin screen

--- a/TODO
+++ b/TODO
@@ -1,5 +1,10 @@
-TODO - Pin Auth Screen
+TODO
 
+Welcome back pin entry:
 Add vibration feedback on tap (Vibration package).
 Hook up biometric login (local_auth package).
 Animate PIN dots (AnimatedSwitcher).
+
+
+global:
+refresh rate
