--- a/TODO
+++ b/TODO
@@ -1,5 +1,12 @@
 TODO
 
+Add a support page with live chat
+terms, privacy, support
+add learn to more page 
+add short intro vidoe series to do stuff
+
+
+add our socials to the more page
 Welcome back pin entry:
 Add vibration feedback on tap (Vibration package).
 Hook up biometric login (local_auth package).
