- Add InvestmentsPage with tabbed navigation for different investment types - Update home.dart to include InvestmentsPage navigation - Modify QuickActionInvestTile to navigate to InvestmentsPage - Refactor MorePage to use ListTile for better structure and navigation - Update portfolio.dart to remove TODO comment - Change GestureDetector to InkWell in QuickActionInvestTile for better touch feedback - Adjust timer duration in home.dart from 1 second to 3 seconds - Update color scheme in home.dart for consistency - Add navigation to InvestmentsPage from various components

--- a/TODO
+++ b/TODO
@@ -4,9 +4,10 @@ Add a support page with live chat
 terms, privacy, support
 add learn to more page 
 add short intro vidoe series to do stuff
+in light mode, all gradients start from the lowest number first
 
 
-add our socials to the more page
+
 Welcome back pin entry:
 Add vibration feedback on tap (Vibration package).
 Hook up biometric login (local_auth package).
