Update README and TODO files with new content
- Expanded the "What's Inside" section in README.md to provide detailed information for investors and providers.
- Added specific benefits for investors, including access to global opportunities, real returns, transparency, and compliance.
- Included advantages for providers, such as a diversified investor base and transparent on-chain infrastructure.
- Updated TODO file to include a new task for user agreement to terms of use and privacy policy before signing up.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 TODO
 
+
+Make them read to the end and agree to terms of use and privacy policy - before signing up
+
 Add a support page with live chat
 terms, privacy, support
 add learn to more page 
